--- a/penombre.css
+++ b/penombre.css
@@ -783,3 +783,23 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+#penombre-reserve-collegiale .jetons {
+  width: 400px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  /* 5 colonnes égales */
+  gap: 10px;
+  padding: 10px;
+}
+#penombre-reserve-collegiale .jetons img.dropshadow-actif,
+#penombre-reserve-collegiale .jetons img.dropshadow-inactif {
+  -webkit-filter: drop-shadow(5px 5px 5px #666666);
+  filter: drop-shadow(5px 5px 5px #666666);
+}
+#penombre-reserve-collegiale .jetons img.dropshadow-actif:hover,
+#penombre-reserve-collegiale .jetons img.dropshadow-inactif:hover {
+  cursor: pointer;
+}
+#penombre-reserve-collegiale .jetons .jeton {
+  text-align: center;
+}
