--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -376,7 +376,12 @@
           width: 35px;
           height: 35px;
 
-          .clicsurconscience:hover {
+          img.dropshadow {
+            -webkit-filter: drop-shadow(5px 5px 5px #666666);
+            filter: drop-shadow(5px 5px 5px #666666);
+          }
+
+          .clic-jeton:hover {
               cursor: pointer;
           }
         }
