--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -17,7 +17,7 @@
     <div class="col-2-2 flexible">
       <table class="table-de flexible">
         <tr class="tr-de flexible">
-          <td class="flexible" title="{{localize 'PENOMBRE.ui.actionScelerate'}}">
+          <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionScelerate'}}">
             <div class="case-de-mouve-1 flexible">
               <div class="absolue">
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
@@ -34,7 +34,7 @@
 
           <td></td>
 
-          <td class="flexible" title="{{localize 'PENOMBRE.ui.actionSociale'}}">
+          <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionSociale'}}">
             <div class="case-de-mouve-2 flexible">
               <div class="absolue">
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
@@ -50,7 +50,7 @@
           </td>
         </tr>
         <tr class="tr-de flexible">
-          <td class="flexible" title="{{localize 'PENOMBRE.ui.actionPhysique'}}">
+          <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionPhysique'}}">
             <div class="case-de-mouve-3 flexible">
               <div class="absolue">
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
@@ -67,7 +67,7 @@
 
           <td></td>
 
-          <td class="flexible" title="{{localize 'PENOMBRE.ui.actionMentale'}}">
+          <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionMentale'}}">
             <div class="case-de-mouve-4 flexible">
               <div class="absolue">
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
@@ -85,7 +85,7 @@
         <tr class="tr-de flexible">
           <td></td>
 
-          <td class="flexible" title="{{localize 'PENOMBRE.ui.actionPerceptive'}}">
+          <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionPerceptive'}}">
             <div class="case-de-mouve-5 flexible">
               <div class="absolue">
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
