Remplace '_' par '-' dans .less

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -370,7 +370,7 @@
           gap: 10px;
           padding: 10px;
           
-          img.dropshadow_actif,
+          img.dropshadow-actif,
           img.dropshadow-inactif {
             -webkit-filter: drop-shadow(5px 5px 5px #666666);
             filter: drop-shadow(5px 5px 5px #666666);
