--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -135,7 +135,8 @@
         .grande-frise-verticale-1,
         .grande-frise-verticale-2,
         .grande-frise-verticale-3,
-        .grande-frise-verticale-4 {
+        .grande-frise-verticale-4,
+        .grande-frise-verticale-5 {
           flex-direction: column;
         }
       }
@@ -239,7 +240,7 @@
 
       // Section conscience
       .eminence-conscience {
-        min-height: 655px;
+        min-height: 800px;
         color: @color-accent;
         // Jetons
         .div-jetons {
