--- a/templates/eminence/partials/timbre.hbs
+++ b/templates/eminence/partials/timbre.hbs
@@ -4,6 +4,6 @@
     {{formGroup systemFields.timbre.fields.statut value=systemSource.timbre.statut localize=true}}
     {{formGroup systemFields.timbre.fields.peste value=systemSource.timbre.peste localize=true}}
   {{else}}
-    <img class="logo-penombre" src="/systems/penombre/assets/ui/logo_penombre_sur_fond_clair.png" />
+    <img class="logo-penombre" ></img>
   {{/if}}
 </div>
